--- a/index.html
+++ b/index.html
@@ -374,14 +374,14 @@
 
         // If this was the last question of a round -> go to roundSummary (players then get bonus)
         const questionInRound = (qIndex + 1) % QUESTIONS_PER_ROUND;
-if (questionInRound === 0) {
+        if (questionInRound === 0) {
   const finishedRound = Math.floor((qIndex + 1) / QUESTIONS_PER_ROUND);
-
   await db.ref(`games/${gameId}/meta`).update({
     phase: 'roundSummary',
-    round: finishedRound + 1     // nächste Runde korrekt vorbereiten
+    round: finishedRound + 1
   });
-}
+}/meta`).update({ phase: 'roundSummary' });
+        }
       }catch(e){ console.error(e); }
     };
 
@@ -410,6 +410,11 @@ if (questionInRound === 0) {
         }
 
         let chosenCategory = metaVal.nextCategory || null;
+// fallback if none chosen
+if(!chosenCategory){
+  const fallbackCat = (catState.remaining && catState.remaining.length>0) ? catState.remaining[0] : (catState.used ? catState.used[0] : null);
+  chosenCategory = fallbackCat;
+}
 
         // update used/remaining
         const remaining = (catState.remaining || []).filter(c => c !== chosenCategory);
@@ -440,14 +445,6 @@ if (questionInRound === 0) {
         });
         await db.ref().update(updates);
 
-// Falls ein Spieler die Kategorie nicht gewählt hat
-if(!chosenCategory){
-  // fallback: zufällige Kategorie aus remaining
-  const fallbackCat = remaining.length > 0 ? remaining[0] : catState.used[0];
-  chosenCategory = fallbackCat;
-}
-
-        
         // set meta to next question
         await db.ref(`games/${gameId}/meta`).update({
           questionIndex: nextIndex,
@@ -470,14 +467,11 @@ if(!chosenCategory){
       }
       const currentRound = Math.floor(currentIndex / QUESTIONS_PER_ROUND) + 1;
       const nextRound = Math.floor(nextIndex / QUESTIONS_PER_ROUND) + 1;
-     if(nextRound > currentRound){
-  // automatische Round-Summary bei Rundensprung
-  await db.ref(`games/${gameId}/meta`).update({
-    phase: 'roundSummary',
-    round: nextRound
-  });
-  return;
-}
+      if(nextRound > currentRound){
+        // if crossing into next round without roundSummary -> ensure roundSummary appears
+        await db.ref(`games/${gameId}/meta`).update({ phase: 'roundSummary', round: nextRound });
+        return;
+      }
 
       // continue to next question in same round
       const pSnap = await db.ref(`games/${gameId}/players`).get();
@@ -843,15 +837,12 @@ if(!chosenCategory){
 
       const finishedRoundNumber = (meta.round || 1) - 1;
 
-    // Runde, die gerade abgeschlossen wurde
-const finishedRoundNumber = (meta.round || 1) - 1;
-
-// Bonus gibt es ab Runde 2 bis vor der letzten Runde
-if (finishedRoundNumber < 1 || finishedRoundNumber >= TOTAL_ROUNDS) {
-  setBonusItemModalOpen(false);
-  setBonusCategoryModalOpen(false);
-  return;
-}
+      // BLOCK: no bonus in first finished round (finishedRoundNumber < 2) and none after final round
+      if (finishedRoundNumber < 1 || finishedRoundNumber >= TOTAL_ROUNDS) {
+        setBonusItemModalOpen(false);
+        setBonusCategoryModalOpen(false);
+        return;
+      }
 
       if(lastPlayers.includes(playerId) && (player.lastRoundBonus !== finishedRoundNumber)){
         // open item modal (step 1)
@@ -1251,10 +1242,6 @@ if (finishedRoundNumber < 1 || finishedRoundNumber >= TOTAL_ROUNDS) {
   </script>
 </body>
 </html>
-
-
-
-
 
 
 
