--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       --muted:rgba(255,255,255,0.65);
     }
 
-
+.card,
+.answer-btn,
+.item-btn,
+.modal-card,
+.countdown-badge {
+  border-radius: 0 !important;
+}
     
     html,body,#root{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
     body{ background:linear-gradient(180deg,var(--bg), #090909); color:var(--tile); }
@@ -1109,6 +1115,7 @@
   </script>
 </body>
 </html>
+
 
 
 
