--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
                   ))}
                 </div>
                 <div style={{marginTop:12, textAlign:'center'}}>
-                  <button className="btn btn-join" onClick={()=>setBonusCategoryModalOpen(false)} style={{width:'100%', padding:'12px 14px'}}>Später</button>
+                  <button className="btn btn-join" onClick={()=>setBonusCategoryModalOpen(false)} style={{width:'100%', padding:'12px 14px'}}>Random</button>
                 </div>
               </div>
             </div>
@@ -1107,6 +1107,7 @@
   </script>
 </body>
 </html>
+
 
 
 
