--- a/index.html
+++ b/index.html
@@ -68,6 +68,34 @@
     }
 
  * { border-radius: 0 !important; }   
+
+/* TV scaling */
+@media (min-width: 1400px) {
+  .host-main, .host-side {
+    font-size: 1.4rem !important;
+  }
+  .answers-grid .answer-btn {
+    font-size: 1.4rem !important;
+    padding: 28px !important;
+    min-height: 150px !important;
+  }
+  .countdown-badge {
+    width: 150px !important;
+    height: 150px !important;
+    font-size: 3.4rem !important;
+  }
+}
+
+   .host-main h2, 
+.host-main h3,
+.host-main h1,
+.answers-grid .answer-btn {
+  line-height: 1.4 !important;
+}
+
+  .countdown-badge {
+  text-shadow: 0 4px 12px rgba(0,0,0,0.8);
+}  
     
     
   </style>
@@ -1107,6 +1135,7 @@
   </script>
 </body>
 </html>
+
 
 
 
